--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
     "react-toastify": "^6.2.0",
+    "sharp": "^0.31.3",
     "tailwindcss": "^2.0.2",
     "uuid": "^8.3.2"
   }
