--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.1.0",
     "react-toastify": "^6.2.0",
     "sharp": "^0.31.3",
+    "swr": "^2.0.3",
     "tailwindcss": "^2.0.2",
     "uuid": "^8.3.2"
   }
